[package]
name = "extapi-dpm"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.8"

[dependencies]
tonic = "0.8"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

warp = "0.3"
async-graphql = { version = "5", features = ["chrono"] }
async-graphql-warp = "5"
futures-util = { version = "0.3.27", features = ["tokio-io"] }
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.24"

[profile.dev]
incremental = false
