[package]
name = "extapi-dpm"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.8"

[dependencies]
futures = "0.3.27"
futures-util = { version = "0.3", features = ["tokio-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "rt"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-futures = "0.2"

async-graphql = { version = "5", features = ["chrono"] }
async-graphql-warp = "5"
warp = "0.3"

chrono = "0.4"

tonic = "0.8"
prost = "0.11"
prost-types = "0.11"

sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }

[profile.dev]
incremental = false
